--- a/백준_단계4_while문.ipynb
+++ b/백준_단계4_while문.ipynb
@@ -243,8 +243,8 @@
         "while 1 : \n",
         "\n",
         "  count +=1   \n",
-        "  sum = N//10+N%10 # 1\n",
-        "  new = N%10*10+sum%10 #68\n",
+        "  sum = N//10+N%10 \n",
+        "  new = N%10*10+sum%10 \n",
         "\n",
         "  print(\"---\")\n",
         "  print(N)\n",
