--- a/백준_단계7_문자열.ipynb
+++ b/백준_단계7_문자열.ipynb
@@ -5,12 +5,8 @@
     "colab": {
       "name": "백준_단계7_문자열.ipynb",
       "provenance": [],
-      "collapsed_sections": [
-        "A5S-Cg9Bg6fP",
-        "4Tdl-wad_3mO",
-        "L_7QN1NUA25L"
-      ],
-      "authorship_tag": "ABX9TyO4fIQvGXybvZA+IYKlsojL",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPv5jRnQqMv5ak7v5i/Om2j",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +46,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -91,21 +87,21 @@
       "source": [
         "n = int(input())\n",
         "number = input()\n",
-        "sum = 0\n",
+        "nsum = 0\n",
         "\n",
         "for i in range(0, len(number)) :\n",
-        "  sum += int(number[i])\n",
+        "  nsum += int(number[i])\n",
         "\n",
-        "print(sum)"
+        "print(nsum)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "UVaMq-HBQKXZ",
-        "outputId": "c5b5d0db-0ec2-4c5c-b38f-7469424fc3e7"
+        "outputId": "6c58bb4f-cb52-497e-82ba-67ce777c0da0"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -146,7 +142,7 @@
         "id": "LA5WiDeVStVp",
         "outputId": "cbf9af95-6c1c-4528-bb7b-39b219cf9fa2"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -175,7 +171,7 @@
         "id": "XUAMr5maS9TB",
         "outputId": "e6adef2b-31ca-4b33-9329-8a144ec0c530"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -208,7 +204,7 @@
         "id": "i7UjG1-wR3oh",
         "outputId": "076da7cd-a957-4427-a517-53a60ec4186f"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -257,7 +253,7 @@
         "id": "r1XF5ZmxdQM2",
         "outputId": "30b6e823-0faa-47d1-ecb7-8e3d88c89bc7"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -287,44 +283,6 @@
     {
       "cell_type": "code",
       "source": [
-        "word = input()\n",
-        "wordx = str(set(word))\n",
-        "count = []\n",
-        "\n",
-        "for i in range(0, len(wordx)) :\n",
-        "  \n",
-        "    n = word.count(wordx[i])\n",
-        "    count.append(n)\n",
-        "\n",
-        "val = max(count)\n",
-        "id = str(count).find(str(val))\n",
-        "print(wordx[id])\n",
-        "\n",
-        "\n",
-        "\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "IVgDFj-lhHRn",
-        "outputId": "031d660a-6033-4629-9d3f-309eea56e7f2"
-      },
-      "execution_count": 38,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "aabc\n",
-            "b\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "[0,0,0,1].count(0)"
       ],
       "metadata": {
@@ -334,7 +292,7 @@
         "id": "84gPCqtwXH-W",
         "outputId": "572080d9-5197-4c41-c423-122ec7a808f4"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -345,6 +303,58 @@
           },
           "metadata": {},
           "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#대소문자 구분 X!!\n",
+        "\n",
+        "\n",
+        "#정답\n",
+        "word = input().upper()\n",
+        "wordx = str(set(word))\n",
+        "count = []\n",
+        "flag = 0\n",
+        "\n",
+        "for i in range(0, len(wordx)) :\n",
+        "  \n",
+        "    n = word.count(wordx[i])\n",
+        "    count.append(n)\n",
+        "\n",
+        "val = max(count)\n",
+        "id = count.index(val)\n",
+        "\n",
+        "for j in range(0, len(count)) :\n",
+        "  if count[j] == val :\n",
+        "    flag += 1\n",
+        "\n",
+        "if flag > 1:  #max값만 중복인 경우\n",
+        "  print('?')\n",
+        "\n",
+        "else:\n",
+        "  print(wordx[id])\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IVgDFj-lhHRn",
+        "outputId": "855defda-fbd2-41ba-c412-a6b18f1e5316"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "aabc\n",
+            "A\n"
+          ]
         }
       ]
     },
@@ -364,13 +374,28 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "\n",
+        "word = list(input().split())\n",
+        "print(len(word))\n"
       ],
       "metadata": {
-        "id": "Chmo3PHf_37l"
+        "id": "Chmo3PHf_37l",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bb2182f7-7c97-4890-da0e-55e54a27e59e"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The last character is a blank \n",
+            "6\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -413,7 +438,7 @@
         "id": "YpPQWUczA44N",
         "outputId": "e1db7583-f31a-4209-9215-73c8416d23bf"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -453,13 +478,120 @@
       "cell_type": "code",
       "source": [
         "word = input()\n",
-        "\n"
+        "time = 0\n",
+        "\n",
+        "\n",
+        "for i in range(0, len(word)) :\n",
+        "\n",
+        "  if word[i] == 'A' or word[i] == 'B' or word[i] == 'C':\n",
+        "    time += 3\n",
+        "  elif word[i] == 'D' or word[i] == 'E' or word[i] == 'F' : \n",
+        "    time += 4\n",
+        "  elif word[i] == 'G' or word[i] == 'H' or word[i] == 'I' : \n",
+        "    time += 5\n",
+        "  elif word[i] == 'J' or word[i] == 'K' or word[i] == 'L' : \n",
+        "    time += 6\n",
+        "  elif word[i] == 'M' or word[i] == 'N' or word[i] == 'O': \n",
+        "    time += 7\n",
+        "  elif word[i] == 'P' or word[i] == 'Q' or word[i] == 'R'or word[i] == 'S':  \n",
+        "    time += 8\n",
+        "  elif word[i] == 'T' or word[i] == 'U' or word[i] == 'V': \n",
+        "    time += 9\n",
+        "  elif word[i] == 'W' or word[i] == 'X' or word[i] == 'Y'or word[i] == 'Z':            \n",
+        "    time += 10\n",
+        "\n",
+        "print(time)\n"
       ],
       "metadata": {
-        "id": "W54gYt15B3J5"
+        "id": "W54gYt15B3J5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "260cd1bf-1934-4852-98df-fe5857e479f1"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "UNUCIC\n",
+            "36\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(ord('A'))\n",
+        "print(ord('C'))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xOeQIBEpqWg4",
+        "outputId": "3f2c448b-46be-4519-ca76-5b3f9c9abd10"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "65\n",
+            "67\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "word = input()\n",
+        "time = 0\n",
+        "\n",
+        "#아스키 코드값으로 범위?\n",
+        "for i in range(0, len(word)) :\n",
+        "\n",
+        "  if 65<= ord(word[i]) <=67:\n",
+        "    time += 3\n",
+        "  elif 68<= ord(word[i]) <=70: \n",
+        "    time += 4\n",
+        "  elif 71<= ord(word[i]) <=73: \n",
+        "    time += 5\n",
+        "  elif 74<= ord(word[i]) <=76: \n",
+        "    time += 6\n",
+        "  elif 77<= ord(word[i]) <=79: \n",
+        "    time += 7\n",
+        "  elif 80<= ord(word[i]) <=83:  \n",
+        "    time += 8\n",
+        "  elif 84<= ord(word[i]) <=86: \n",
+        "    time += 9\n",
+        "  elif 87<= ord(word[i]) <=90:            \n",
+        "    time += 10\n",
+        "\n",
+        "print(time)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dXt_wEk2qQ-m",
+        "outputId": "f57f6ce9-1754-43e1-9f54-8d933a87a235"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "WA\n",
+            "13\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -486,49 +618,56 @@
         "croatia = ['c=', 'c-', 'dz=', 'd-', 'lj', 'nj', 's=', 'z=']\n",
         "\n",
         "count1 = 0\n",
-        "coubt2 = 0\n",
-        "count = 0\n",
+        "count2 = 0\n",
+        "\n",
+        "\n",
+        "#for i in range(0,8) :\n",
+        "\n",
+        "\n",
         "\n",
         "for i in range(0,8) :\n",
         "\n",
-        "  if cro.find(croatia[i]) != -1  :\n",
-        "    count1 += 1 \n",
+        "  while  cro.find(croatia[i]) != -1:\n",
         "\n",
-        "    if i == 2:\n",
-        "      a = cro[cro.find(croatia[i])]\n",
-        "      b = cro[cro.find(croatia[i])+1]\n",
-        "      c = cro[cro.find(croatia[i])+2]      \n",
-        "      count2 = len(set(cro)-set(a)-set(b)-set(c))\n",
-        "      \n",
-        "    else :\n",
-        "      a = cro[cro.find(croatia[i])]\n",
-        "      b = cro[cro.find(croatia[i])+1]\n",
-        "      count2 = len(set(cro)-set(a)-set(b))\n",
+        "      count1 += 1\n",
+        "      if i == 2: #세글자인 경우\n",
+        "        n = cro.find(croatia[i])\n",
+        "        cro = cro[:n]+'*'+cro[n+3:]\n",
+        "         \n",
+        "      else :#두글자인 경우\n",
+        "        n = cro.find(croatia[i])\n",
+        "        cro = cro[:n]+'*'+cro[n+2:]\n",
+        "        \n",
         "\n",
-        "  else :\n",
-        "\n",
-        "    count = len(cro)\n",
+        "      count2 = len(cro)\n",
+        "      count2 -= count1\n",
+        "      #print(count1, count2, cro)\n",
         "\n",
         "\n",
-        "  count = count1+count2\n",
+        "if count1 == 0 :\n",
         "\n",
-        "print(count)\n"
+        "  print(len(cro))\n",
+        "\n",
+        "\n",
+        "else :\n",
+        "\n",
+        "  print(count1+count2)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "TK4sLfY4rwmm",
-        "outputId": "bc774ada-4fcf-4243-9f22-30a77c802301"
+        "id": "8rBwoGKt4jXm",
+        "outputId": "2fb3fdb5-edb6-49b8-aedd-354e31bc1df0"
       },
-      "execution_count": 24,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "c=c=\n",
-            "1\n"
+            "dz=ak\n",
+            "3\n"
           ]
         }
       ]
@@ -536,84 +675,108 @@
     {
       "cell_type": "code",
       "source": [
-        "set([1,2,3])-set([1])"
+        "????replace(,,1)"
+      ],
+      "metadata": {
+        "id": "cKWFojnDqkb_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#10. 문제 번호: 1316\t[그룹 단어 체커]\t\n",
+        "\n",
+        "조건에 맞는 문자열을 찾는 문제\n",
+        "\n",
+        "그룹 단어란 단어에 존재하는 모든 문자에 대해서, 각 문자가 연속해서 나타나는 경우만을 말한다. 예를 들면, ccazzzzbb는 c, a, z, b가 모두 연속해서 나타나고, kin도 k, i, n이 연속해서 나타나기 때문에 그룹 단어이지만, aabbbccb는 b가 떨어져서 나타나기 때문에 그룹 단어가 아니다.\n",
+        "\n",
+        "단어 N개를 입력으로 받아 그룹 단어의 개수를 출력하는 프로그램을 작성하시오."
+      ],
+      "metadata": {
+        "id": "3VJKuO5wU26Y"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = int(input())\n",
+        "total = []\n",
+        "count = 0\n",
+        "for i in range(0, n) :\n",
+        "  word = input()\n",
+        "  total.append(word)\n",
+        "\n",
+        "for j in range(0,n) :\n",
+        "\n",
+        "  for k in range(0,len(total[j])) :\n",
+        "\n",
+        "    if k+1 == len(total[j]) :\n",
+        "      break\n",
+        "\n",
+        "    \n",
+        "    if total[j][k] == total[j][k+1] :\n",
+        "      count+=1\n",
+        "    else :\n",
+        "      count-=1\n",
+        "\n",
+        "print(count)\n",
+        "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "AISm1d44vBMx",
-        "outputId": "b11a4b89-8279-409d-bd19-d760afb2c3d9"
-      },
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "{2, 3}"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 6
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "set([123])+set([4])"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 166
-        },
-        "id": "DsLbOoPBvL-9",
-        "outputId": "5c30c0d1-1e83-4a45-97c5-94df71ed21e2"
-      },
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-16-3e85df290647>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m123\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'set' and 'set'"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "set(\"123\")+set(\"4\")"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 166
-        },
-        "id": "LfaLd436v9uw",
-        "outputId": "b42bb012-184f-42f9-ec04-574b77f947d6"
+        "id": "r2OTGyULVAcT",
+        "outputId": "22829fc4-ef37-482f-da6e-88f8586f3420"
       },
       "execution_count": 18,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-18-d76a0a25c5ae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"123\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"4\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'set' and 'set'"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n",
+            "happy\n",
+            "new\n",
+            "year\n",
+            "-7\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = int(input())\n",
+        "total = []\n",
+        "count = 0\n",
+        "for i in range(0, n) :\n",
+        "  word = input()\n",
+        "  total.append(word)\n",
+        "\n",
+        "for j in range(0,n) :\n",
+        "\n",
+        "  for k in range(0,len(total[j])) :\n",
+        "\n",
+        "    if k+1 == len(total[j]) :\n",
+        "      break\n",
+        "\n",
+        "    \n",
+        "    if total[j][k] == total[j][k+1] :\n",
+        "      count+=1\n",
+        "    else :\n",
+        "      count-=1\n",
+        "\n",
+        "print(count)\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "FAEZ36-Vr84U"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
