--- a/백준_단계7_문자열.ipynb
+++ b/백준_단계7_문자열.ipynb
@@ -6,7 +6,7 @@
       "name": "백준_단계7_문자열.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPv5jRnQqMv5ak7v5i/Om2j",
+      "authorship_tag": "ABX9TyOYnRgNIKN5HCC7TYqnkGNv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -309,10 +309,9 @@
     {
       "cell_type": "code",
       "source": [
-        "#대소문자 구분 X!!\n",
-        "\n",
         "\n",
         "#정답\n",
+        "\n",
         "word = input().upper()\n",
         "wordx = str(set(word))\n",
         "count = []\n",
@@ -477,6 +476,7 @@
     {
       "cell_type": "code",
       "source": [
+        "#답1\n",
         "word = input()\n",
         "time = 0\n",
         "\n",
@@ -524,31 +524,11 @@
     {
       "cell_type": "code",
       "source": [
-        "print(ord('A'))\n",
-        "print(ord('C'))"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "xOeQIBEpqWg4",
-        "outputId": "3f2c448b-46be-4519-ca76-5b3f9c9abd10"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "65\n",
-            "67\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "#답2\n",
+        "\n",
+        "#print(ord('A')) -> 65\n",
+        "#print(ord('C')) -> 67\n",
+        "\n",
         "word = input()\n",
         "time = 0\n",
         "\n",
@@ -579,16 +559,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dXt_wEk2qQ-m",
-        "outputId": "f57f6ce9-1754-43e1-9f54-8d933a87a235"
+        "outputId": "aaa8ef16-3bc8-4dd7-b0b0-c9c7439b13d9"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "WA\n",
-            "13\n"
+            "UNUCIC\n",
+            "36\n"
           ]
         }
       ]
@@ -608,6 +588,23 @@
       ],
       "metadata": {
         "id": "W1nApRk5bxlE"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " replace(old, new, [count])\n",
+        "\n",
+        "- old : 현재 문자열에서 변경하고 싶은 문자\n",
+        "\n",
+        "- new: 새로 바꿀 문자\n",
+        "\n",
+        "- count: 변경할 횟수. 횟수는 입력하지 않으면 old의 문자열 **전체**를 변경한다. 기본값은 전체를 의미하는 count=-1로 지정되어있다. \n",
+        "\n",
+        " "
+      ],
+      "metadata": {
+        "id": "187bWXMzKYfC"
       }
     },
     {
@@ -673,17 +670,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "????replace(,,1)"
-      ],
-      "metadata": {
-        "id": "cKWFojnDqkb_"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "#10. 문제 번호: 1316\t[그룹 단어 체커]\t\n",
@@ -702,36 +688,33 @@
       "cell_type": "code",
       "source": [
         "n = int(input())\n",
-        "total = []\n",
-        "count = 0\n",
+        "group_word = 0\n",
+        "\n",
+        "\n",
         "for i in range(0, n) :\n",
         "  word = input()\n",
-        "  total.append(word)\n",
+        "  error = 0\n",
         "\n",
-        "for j in range(0,n) :\n",
+        "  for index in range(len(word)-1):\n",
+        "    if word[index] != word[index+1] :\n",
+        "      new_word = word[index+1:]\n",
         "\n",
-        "  for k in range(0,len(total[j])) :\n",
+        "      if new_word.count(word[index]) > 0 :\n",
+        "        error += 1\n",
+        "  if error == 0 :\n",
+        "    group_word += 1\n",
         "\n",
-        "    if k+1 == len(total[j]) :\n",
-        "      break\n",
-        "\n",
-        "    \n",
-        "    if total[j][k] == total[j][k+1] :\n",
-        "      count+=1\n",
-        "    else :\n",
-        "      count-=1\n",
-        "\n",
-        "print(count)\n",
+        "print(group_word)\n",
         "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "r2OTGyULVAcT",
-        "outputId": "22829fc4-ef37-482f-da6e-88f8586f3420"
+        "id": "FAEZ36-Vr84U",
+        "outputId": "1cd07fe7-fb41-4ae9-e771-e160dcea5b91"
       },
-      "execution_count": 18,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -741,42 +724,10 @@
             "happy\n",
             "new\n",
             "year\n",
-            "-7\n"
+            "3\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "n = int(input())\n",
-        "total = []\n",
-        "count = 0\n",
-        "for i in range(0, n) :\n",
-        "  word = input()\n",
-        "  total.append(word)\n",
-        "\n",
-        "for j in range(0,n) :\n",
-        "\n",
-        "  for k in range(0,len(total[j])) :\n",
-        "\n",
-        "    if k+1 == len(total[j]) :\n",
-        "      break\n",
-        "\n",
-        "    \n",
-        "    if total[j][k] == total[j][k+1] :\n",
-        "      count+=1\n",
-        "    else :\n",
-        "      count-=1\n",
-        "\n",
-        "print(count)\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "FAEZ36-Vr84U"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
