--- a/백준_단계8_기본수학1.ipynb
+++ b/백준_단계8_기본수학1.ipynb
@@ -15,7 +15,7 @@
         "vp78rAzj4yMH",
         "QQrV0AZR48yH"
       ],
-      "authorship_tag": "ABX9TyOlBC3i6rWMxt1MD5764JRq",
+      "authorship_tag": "ABX9TyNzI5rmHg0mrT+8aSXPHUkZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,7 +75,7 @@
         "id": "Mw5pBKG28w75",
         "outputId": "28f58c3d-b139-41f5-a5a9-e07edeaf4e15"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -160,7 +160,7 @@
         "id": "0Ayl3FXn4eJA",
         "outputId": "97f60109-7340-40af-f168-8bd262402ec2"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -214,22 +214,24 @@
     {
       "cell_type": "code",
       "source": [
-        "print(\"{0}\" .format(2))"
+        "print(\"{0}\" .format(2))\n",
+        "print(\"{0}/{1}\" .format(1,1))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "QRwSR6vVkM4r",
-        "outputId": "cde7f94e-c6f4-4f84-9a47-a1342e612efa"
+        "outputId": "e9b00320-2bd0-4cf2-cf07-ecd996cb8c4e"
       },
-      "execution_count": 49,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2\n"
+            "2\n",
+            "1/1\n"
           ]
         }
       ]
@@ -237,52 +239,52 @@
     {
       "cell_type": "code",
       "source": [
-        "\n",
-        "\n",
         "n = int(input())\n",
         "\n",
-        "\n",
-        "a=0\n",
-        "b=0\n",
-        "n=0\n",
         "arr = []\n",
+        "num = 0\n",
+        "N = 0\n",
+        "a = 1  #1 12 321 1234\n",
+        "b = 1  #1 21 123 4321\n",
         "\n",
-        "while flag == 0 :\n",
+        "while 1:\n",
+        "\n",
+        "  num+=1\n",
+        "\n",
+        "  if num % 2 == 0:\n",
+        "\n",
+        "    for i in range(1,num+1):\n",
+        "        a = i\n",
+        "        b = a-1\n",
+        "        arr.append(\"{0}/{1}\" .format(a,b))  \n",
+        "\n",
+        "  else :\n",
+        "\n",
+        "    for i in range(1,num+1):\n",
+        "        b = i\n",
+        "        a = b-1\n",
+        "        arr.append(\"{0}/{1}\" .format(a,b))    \n",
+        "\n",
+        "  if num == 10000000 :\n",
+        "    break\n",
         "\n",
         "\n",
-        "  arr.append(\"{0}/{1}\" .format(a,b))\n",
-        "\n",
-        "  if arr[n-1] == \"{0}/{1}\" .format(a,b) :\n",
-        "\n",
-        "    flag = 1\n",
-        "\n",
-        "\n",
-        "  a+=1\n",
-        "  b-=1\n",
-        "  n+=1\n",
-        "  a=b\n",
-        "  b=a\n",
-        "\n",
-        "\n",
-        "print(\"{0}/{1}\" .format(a,b))\n",
-        "\n",
-        "\n"
+        "print(arr[n-1])"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2jQCy8tp4ek_",
-        "outputId": "6b14c3ba-686b-460f-d58f-1305dd98c867"
+        "outputId": "73170788-1958-4473-91ff-339f8410c4dc"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
-            "5\n",
-            "0/0\n"
+            "5\n"
           ]
         }
       ]
