--- a/백준_단계8_기본수학1.ipynb
+++ b/백준_단계8_기본수학1.ipynb
@@ -15,7 +15,7 @@
         "vp78rAzj4yMH",
         "QQrV0AZR48yH"
       ],
-      "authorship_tag": "ABX9TyNzI5rmHg0mrT+8aSXPHUkZ",
+      "authorship_tag": "ABX9TyPR+vu2jbBD4c51g7rlGfgp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -224,7 +224,7 @@
         "id": "QRwSR6vVkM4r",
         "outputId": "e9b00320-2bd0-4cf2-cf07-ecd996cb8c4e"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -241,53 +241,26 @@
       "source": [
         "n = int(input())\n",
         "\n",
-        "arr = []\n",
-        "num = 0\n",
-        "N = 0\n",
-        "a = 1  #1 12 321 1234\n",
-        "b = 1  #1 21 123 4321\n",
+        "line = 0  # 사선 라인\n",
+        "max_num = 0  # 입력된 숫자(input_num 변수)의 라인에서 가장 큰 숫자\n",
+        "while input_num > max_num:\n",
+        "    line += 1  \n",
+        "    max_num += line  \n",
         "\n",
-        "while 1:\n",
-        "\n",
-        "  num+=1\n",
-        "\n",
-        "  if num % 2 == 0:\n",
-        "\n",
-        "    for i in range(1,num+1):\n",
-        "        a = i\n",
-        "        b = a-1\n",
-        "        arr.append(\"{0}/{1}\" .format(a,b))  \n",
-        "\n",
-        "  else :\n",
-        "\n",
-        "    for i in range(1,num+1):\n",
-        "        b = i\n",
-        "        a = b-1\n",
-        "        arr.append(\"{0}/{1}\" .format(a,b))    \n",
-        "\n",
-        "  if num == 10000000 :\n",
-        "    break\n",
-        "\n",
-        "\n",
-        "print(arr[n-1])"
+        "gap = max_num - input_num \n",
+        "if line % 2 == 0:  # 사선 라인이 짝수번째 일 때\n",
+        "    top = line - gap  #분자\n",
+        "    under = gap + 1  #분모\n",
+        "else :  # 사선 라인이 홀수번째 일 때\n",
+        "    top = gap + 1  #분자\n",
+        "    under = line - gap  #분모\n",
+        "print(f'{top}/{under}')"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "2jQCy8tp4ek_",
-        "outputId": "73170788-1958-4473-91ff-339f8410c4dc"
+        "id": "LYDe32sP-QDj"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "5\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -296,6 +269,16 @@
         "\n",
         "달팽이의 움직임을 계산하는 문제\n",
         "\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "\n",
+        "땅 위에 달팽이가 있다. 이 달팽이는 높이가 V미터인 나무 막대를 올라갈 것이다.\n",
+        "\n",
+        "달팽이는 낮에 A미터 올라갈 수 있다. 하지만, 밤에 잠을 자는 동안 B미터 미끄러진다. 또, 정상에 올라간 후에는 미끄러지지 않는다.\n",
+        "\n",
+        "달팽이가 나무 막대를 모두 올라가려면, 며칠이 걸리는지 구하는 프로그램을 작성하시오.\n",
         "\n"
       ],
       "metadata": {
@@ -305,20 +288,93 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "A, B, V = map(int, input().split())\n",
+        "\n",
+        "\n",
+        "def day_cal(A, B, V):\n",
+        "  D = 0 \n",
+        "  while V > D*(A-B):\n",
+        "    D+=1\n",
+        "  return D\n",
+        "\n",
+        "print(day_cal(A, B, V))\n",
+        "\n",
+        "\n",
+        "12345\n"
       ],
       "metadata": {
-        "id": "Ycw3AGBm4fAL"
+        "id": "Ycw3AGBm4fAL",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3cf22212-9523-41b6-b5c8-d1bd692c7242"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5 1 6\n",
+            "1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- math.ceil() : 올림\n",
+        "\n",
+        "- math.floor() : 내림\n",
+        "\n",
+        "- round(a,b) : 반올림 -> a는 숫자 b는 반올림할 자릿수\n"
+      ],
+      "metadata": {
+        "id": "-qshQ6zrINVq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#정답\n",
+        "\n",
+        "import math\n",
+        "\n",
+        "A, B, V = map(int, input().split())\n",
+        "\n",
+        "day = (V - B) / (A - B)  #???????\n",
+        "print(math.ceil(day)) #"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1AremtLqHOpe",
+        "outputId": "0ae46ffa-3e0f-4506-d507-849271cbe97b"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "100 99 1000000000\n",
+            "999999901\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "source": [
         "#5. 문제 번호 : 10250\t[ACM 호텔]\t\n",
         "\n",
-        "호텔 방 번호의 규칙을 찾아 출력하는 문제"
+        "호텔 방 번호의 규칙을 찾아 출력하는 문제\n",
+        "\n",
+        "\n",
+        "---\n",
+        "\n"
       ],
       "metadata": {
         "id": "YbPT7NwJ4c2C"
