--- a/백준_단계8_기본수학1.ipynb
+++ b/백준_단계8_기본수학1.ipynb
@@ -5,17 +5,8 @@
     "colab": {
       "name": "백준_단계8_기본수학1.ipynb",
       "provenance": [],
-      "collapsed_sections": [
-        "SImsBZWoawPM",
-        "K1mH-IPr387y",
-        "MeF0cEvF4bt2",
-        "YbPT7NwJ4c2C",
-        "9PDvGci84f4F",
-        "piZ-ck0m4qDD",
-        "vp78rAzj4yMH",
-        "QQrV0AZR48yH"
-      ],
-      "authorship_tag": "ABX9TyPR+vu2jbBD4c51g7rlGfgp",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyOMv0JbJiDDSKdRuzlbbhWS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -175,6 +166,7 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# !!!!다시\n",
         "\n",
         "#3. 문제 번호 : 1193\t[분수찾기]\t\n",
         "\n",
@@ -265,6 +257,8 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# !!!!다시\n",
+        "\n",
         "#4. 문제 번호 : 2869\t[달팽이는 올라가고 싶다]\t\n",
         "\n",
         "달팽이의 움직임을 계산하는 문제\n",
@@ -383,13 +377,64 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "T = int(input())\n",
+        "\n",
+        "for i in range(0, T):\n",
+        "  H, W, N = map(int, input().split())\n",
+        "\n",
+        "  if H>=N:\n",
+        "    fl = N\n",
+        "    ho = 1\n",
+        "\n",
+        "    print(f'{fl}0{ho}')\n",
+        "\n",
+        "\n",
+        "  else :\n",
+        "    fl = N%H    \n",
+        "\n",
+        "    if fl ==0 :\n",
+        "      fl = H   \n",
+        "      ho = N//H      \n",
+        "      if ho >= 10:\n",
+        "        print(f'{fl}{ho}')\n",
+        "      else :\n",
+        "        print(f'{fl}0{ho}')\n",
+        "\n",
+        "    else :\n",
+        "      ho = N//H\n",
+        "      if ho >= 10:\n",
+        "        print(f'{fl}{ho+1}')\n",
+        "      else :\n",
+        "\n",
+        "        if ho == 9 :\n",
+        "          print(f'{fl}{ho+1}')\n",
+        "        else :\n",
+        "          print(f'{fl}0{ho+1}')\n",
+        "\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
-        "id": "8gIMAUnQ4fZm"
+        "id": "8gIMAUnQ4fZm",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "09b04e7b-c59b-4673-b456-ef4dba32a77c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "6 12 10\n",
+            "402\n",
+            "30 50 72\n",
+            "1203\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -405,10 +450,165 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "#1 2 3 4\n",
+        "#1 3 6 10\n",
+        "#1 4 10 20\n",
+        "\n",
+        "T = int(input())\n",
+        "arr=[]\n",
+        "arr_total = []\n",
+        "fac = 0\n",
+        "\n",
+        "for i in range(1,15):\n",
+        "  arr.append(i)\n",
+        "\n",
+        "arr_total.append(arr)\n",
+        "arr=[]\n",
+        "\n",
+        "for i in range(0,T):\n",
+        "  k = int(input()) # 1<=k\n",
+        "  n = int(input()) # n<=14\n",
+        "\n",
+        "\n",
+        "for i in range(0, k+1):\n",
+        "  for j in range(0,n):\n",
+        "    if j == 0 :\n",
+        "      arr.append(1)\n",
+        "      \n",
+        "    else : \n",
+        "      fac += arr_total[i][j]\n",
+        "      arr.append(fac)\n",
+        "    \n",
+        "    arr_total.append(arr)\n",
+        "\n",
+        "  arr=[]\n",
+        "\n",
+        "print(arr_total)"
       ],
       "metadata": {
-        "id": "oN7FDUPt4p0f"
+        "id": "oN7FDUPt4p0f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "78bfb115-34d2-4345-81a5-16e4d1b06d5f"
+      },
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "5\n",
+            "5\n",
+            "[[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14], [1, 2, 5, 9, 14], [1, 2, 5, 9, 14], [1, 2, 5, 9, 14], [1, 2, 5, 9, 14], [1, 2, 5, 9, 14], [1, 16, 21, 30, 44], [1, 16, 21, 30, 44], [1, 16, 21, 30, 44], [1, 16, 21, 30, 44], [1, 16, 21, 30, 44], [1, 46, 51, 60, 74], [1, 46, 51, 60, 74], [1, 46, 51, 60, 74], [1, 46, 51, 60, 74], [1, 46, 51, 60, 74], [1, 76, 81, 90, 104], [1, 76, 81, 90, 104], [1, 76, 81, 90, 104], [1, 76, 81, 90, 104], [1, 76, 81, 90, 104], [1, 106, 111, 120, 134], [1, 106, 111, 120, 134], [1, 106, 111, 120, 134], [1, 106, 111, 120, 134], [1, 106, 111, 120, 134], [1, 136, 141, 150, 164], [1, 136, 141, 150, 164], [1, 136, 141, 150, 164], [1, 136, 141, 150, 164], [1, 136, 141, 150, 164]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "resident_zero = 0\n",
+        "resident = 0\n",
+        "resident_total = 0\n",
+        "arr = []\n",
+        "arr_fac = []\n",
+        "T = int(input())\n",
+        "\n",
+        "for i in range(0,T):\n",
+        "  k = int(input()) \n",
+        "  n = int(input()) \n",
+        "\n",
+        "  if k <= 1 :\n",
+        "    for j in range(0, n):\n",
+        "      resident_zero += 1\n",
+        "      arr_fac.append(resident_zero)   \n",
+        "      resident += arr_fac[j]\n",
+        "    arr.append(arr_fac)\n",
+        "    arr_fac = []\n",
+        "\n",
+        "  else :\n",
+        "    for m in range(1,k+1):\n",
+        "      for j in range(1,n+1):\n",
+        "        if j == 1:\n",
+        "          resident = 1\n",
+        "          arr_fac.append(resident)\n",
+        "        else :\n",
+        "          resident += arr[m-1][j-1]\n",
+        "          arr_fac.append(resident)     \n",
+        "        \n",
+        "      arr.append(arr_fac) \n",
+        "      arr_fac = []\n",
+        "    \n",
+        "\n",
+        "  for z in range(0,n):\n",
+        "    resident_total += arr[k-1][z]\n",
+        "\n",
+        "  print(arr)\n",
+        "  print(resident_total)\n",
+        "  resident_total = 0"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 288
+        },
+        "id": "r8MyDuEfbwXx",
+        "outputId": "d917ab4b-282b-47d5-f20f-b87fadebd0e5"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "4\n",
+            "5\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "IndexError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-31-c9b5351608ca>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     25\u001b[0m           \u001b[0marr_fac\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresident\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m         \u001b[0;32melse\u001b[0m \u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 27\u001b[0;31m           \u001b[0mresident\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0marr\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     28\u001b[0m           \u001b[0marr_fac\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresident\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "1 2 3 4\n",
+        "1 3 6 10\n",
+        "1 4 10 20\n",
+        "\n",
+        "\n",
+        "1 2 3\n",
+        "\n",
+        "0 \n",
+        "1 2 3 = 6\n",
+        "1\n",
+        "1 3 *6 = 10\n",
+        "2\n",
+        "1 2 *3\n",
+        "\n",
+        "\n",
+        "6\n",
+        "k = 1\n",
+        "n = 3\n",
+        "6\n",
+        "\n",
+        "k = 2\n",
+        "k = 3"
+      ],
+      "metadata": {
+        "id": "M5SLqtk3FlVa"
       },
       "execution_count": null,
       "outputs": []
